--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -63,70 +63,77 @@
     </div>
     <!-- Offcanvas Menu End -->
 
-    <!-- Header Section Begin -->
-    <header class="header">
-      <div class="header__top">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-6 col-md-7">
-                      <div class="header__top__left">
-                          <p>Free shipping, 30-day return or refund guarantee.</p>
-                      </div>
-                  </div>
-                  <div class="col-lg-6 col-md-5">
-                      <div class="header__top__right">
-                          <div class="header__top__links">
-                              <a href="/Register">Sign in</a>
-                              <a href="#">FAQs</a>
-                          </div>
-                          
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-3 col-md-3">
-                  <div class="header__logo">
-                      <a href="./index.html"><img class="logo" src="/img/ssLOGO.png" alt=""></a>
-                  </div>
-              </div>
-              <div class="col-lg-6 col-md-6">
-                  <nav class="header__menu mobile-menu">
-                      <ul>
-                          <li ><a href="/home">Home</a></li>
-                          <li class="active"><a href="/shop">Shop</a></li>
-                          <li><a href="#">Pages</a>
-                              <ul class="dropdown">
-                                  <!-- <li><a href="./about.html">About Us</a></li>
-                                  <li><a href="./shop-details.html">Shop Details</a></li> -->
-                                  <li><a href="./cart">Shopping Cart</a></li>
-                                  <!-- <li><a href="./checkout.html">Check Out</a></li>
-                                  <li><a href="./blog-details.html">Blog Details</a></li> -->
-                              </ul>
-                          </li>
-                          <li><a href="./blog.html">Blog</a></li>
-                          <li><a href="./contact.html">Contacts</a></li>
-                      </ul>
-                  </nav>
-              </div>
-              <div class="col-lg-3 col-md-3" style="padding-left: 70px;">
-                  <div class="header__nav__option d-flex">
-                      <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                      <a href="#"><img src="img/icon/heart.png" alt=""></a>
-                      <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
-                      <div style="width: 19px;
-                      height: 19px;">
-                          <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="canvas__open"><i class="fa fa-bars"></i></div>
-      </div>
-  </header>
-  <!-- Header Section End -->
+   <!-- Header Section Begin -->
+   <header class="header">
+    <div class="header__top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-7">
+                    <div class="header__top__left">
+                        <p>Free shipping, 30-day return or refund guarantee.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-5">
+                    <div class="header__top__right">
+                        <div class="header__top__links">
+                            <a href="/Register">Sign in</a>
+                            <a href="/logout">Sign Out</a>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-3">
+                <div class="header__logo">
+                    <a href="./index.html"><img class="logo" src="/img/ssLOGO.png" alt=""></a>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <nav class="header__menu mobile-menu">
+                    <ul>
+                        <li class="active"><a href="/home">Home</a></li>
+                        <li><a href="/shop">Shop</a></li>
+                        <li><a href="#">Pages</a>
+                            <ul class="dropdown">
+                               
+                                <li><a href="./shop">Shop</a></li>
+                                <li><a href="./cart">Shopping Cart</a></li>
+                                 <li><a href="./profile">Profile</a></li>
+                                 <li><a href="./wallet">Wallet</a></li>
+                                
+                            </ul>
+                        </li>
+                        <li><a href="/wallet">Wallet</a></li>
+                        
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-3 col-md-3" style="padding-left: 70px;">
+                <div class="header__nav__option d-flex">
+                    <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
+                    <a href="#"><img src="img/icon/heart.png" alt=""></a>
+                    <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
+
+                    <div style="width: 21px;
+                    height: 21px; margin-right: 20px;">
+                        <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
+                    </div>
+                    
+                    <div style="width: 19px;
+                    height: 19px;">
+                        <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="canvas__open"><i class="fa fa-bars"></i></div>
+    </div>
+</header>
+<!-- Header Section End -->
 
     <!-- Breadcrumb Section Begin -->
     <section class="breadcrumb-option">
