--- a/views/userView/wallet.ejs
+++ b/views/userView/wallet.ejs
@@ -77,6 +77,7 @@
             font-size: 24px;
             font-weight: bold;
             margin-left: 100px;
+            color: #2fc52f;
         }
 
         .transaction-amount-debit {
@@ -236,7 +237,7 @@
 
         <div class="container wallet-container">
             <div class="wallet-header">
-                <h2>Your Sleek Wallet</h2>
+                <h2>Your Wallet</h2>
             </div>
             <div class="balance">
                 ₹ <%= wallet.balance %>/-
