--- a/views/adminView/editProduct.ejs
+++ b/views/adminView/editProduct.ejs
@@ -221,13 +221,13 @@
         <!--  Header End -->
         <div class="container-fluid">
           <!-- Row 1 -->
-          <div class="row text-center">
+          <div class="row text-center"  >
              
               
 
 
           
-            <div class="container mt-5">
+            <div class="container mt-5";>
                 <h2 class=" mb-5">Edit Product</h2>
                 
             
