--- a/views/adminView/products.ejs
+++ b/views/adminView/products.ejs
@@ -414,7 +414,7 @@
           return response.json();
          })
          .then(data =>{
-          console.log(data.Name);
+          console.log(data.value);
 
           setTimeout(() => {
               window.location.reload()
