--- a/views/userView/orderDetail.ejs
+++ b/views/userView/orderDetail.ejs
@@ -68,10 +68,10 @@
                           <li><a href="#">Pages</a>
                               <ul class="dropdown">
                                  
-                                  <li><a href="./shop">Shop</a></li>
-                                  <li><a href="./cart">Shopping Cart</a></li>
-                                   <li><a href="./profile">Profile</a></li>
-                                   <li><a href="./wallet">Wallet</a></li>
+                                  <li><a href="/shop">Shop</a></li>
+                                  <li><a href="/cart">Shopping Cart</a></li>
+                                   <li><a href="/profile">Profile</a></li>
+                                   <li><a href="/wallet">Wallet</a></li>
                                   
                               </ul>
                           </li>
@@ -82,18 +82,18 @@
               </div>
               <div class="col-lg-3 col-md-3" style="padding-left: 70px;">
                   <div class="header__nav__option d-flex">
-                      <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                      <a href="#"><img src="img/icon/heart.png" alt=""></a>
-                      <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
+                      <a href="#" class="search-switch"><img src="/img/icon/search.png" alt=""></a>
+                      <a href="#"><img src="/img/icon/heart.png" alt=""></a>
+                      <a href="./cart"><img src="/img/icon/cart.png" alt="cart"> </a>
 
                       <div style="width: 21px;
                       height: 21px; margin-right: 20px;">
-                          <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
+                          <a href="./wallet"><img src="/img/icon/wallet.png" alt="Profile"></i> </a>
                       </div>
                       
                       <div style="width: 19px;
                       height: 19px;">
-                          <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
+                          <a href="./profile"><img src="/img/icon/user.png" alt="Profile"> </a>
                       </div>
                   </div>
               </div>
