--- a/views/adminView/orders.ejs
+++ b/views/adminView/orders.ejs
@@ -47,7 +47,7 @@
         <!-- Sidebar scroll-->
         <div>
           <div class="brand-logo d-flex align-items-center justify-content-between">
-            <a href="./index.html" class="text-nowrap logo-img">  
+            <a href="./Dashboard"class="text-nowrap logo-img">  
               <img src="/img/ssLOGO.png" width="180" alt="" />
             </a>
             <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
