--- a/views/userView/orderSuccess.ejs
+++ b/views/userView/orderSuccess.ejs
@@ -90,7 +90,7 @@
           <div class="row">
               <div class="col-lg-3 col-md-3">
                   <div class="header__logo">
-                      <a href="./index.html"><img class="logo" src="/img/ssLOGO.png" alt=""></a>
+                      <a href="./home"><img class="logo" src="/img/ssLOGO.png" alt=""></a>
                   </div>
               </div>
               <div class="col-lg-6 col-md-6">
