--- a/views/adminView/login.ejs
+++ b/views/adminView/login.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Login 04</title>
+  	<title>SOLE SAAVY</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,11 +15,6 @@
 	<body>
 	<section class="ftco-section">
 		<div class="container">
-			<!-- <div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Login #04</h2>
-				</div>
-			</div> -->
 			<div class="row justify-content-center ">
 				<div class="col-md-12 col-lg-10" ">
 					<div class="wrap d-md-flex">
@@ -30,16 +25,13 @@
 			      		<div class="w-100">
 			      			<h2 class="mb-4">Admin Login</h2>
 							  <% if (locals.message) { %>
-								<!-- <h4 style="color: rgba(138, 157, 61, 0.458) "><%= message %></h4> -->
+								
 								<div style="background-color: #d1c58b; padding: 10px; border: 1px solid #ccc; border-radius: 5px; min-height: 30px;">
 									<h4 style="color: rgb(235, 2, 2); margin-bottom: 10px;"><%= message %></h4>
 								  </div>
 						    <% } %>
 
-						<!-- <% if (locals.verifymessage) { %>
-							<h4 style="color: rgb(235, 2, 2) "><%= verifymessage %></h4>
-							<a href='/otp' ;" >Click Here To Get OTP </a>
-					    <% } %> -->
+						
 					<% if (locals.verifymessage) { %>
 						<div style="background-color: #d1c58b; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
 						  <h4 style="color: rgb(235, 2, 2); margin-bottom: 10px;"><%= verifymessage %></h4>
