--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -117,23 +117,22 @@
                       </ul>
                   </nav>
               </div>
-              <div class="col-lg-3 col-md-3" style="padding-left: 70px;">
-                  <div class="header__nav__option d-flex">
-                      <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                      <a href="#"><img src="img/icon/heart.png" alt=""></a>
-                      <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
+              <div class="col-lg-3 col-md-3" style="padding-left: 112px;">
+                <div class="header__nav__option d-flex">
+                    <a  href="" class="search-switch"><img src="img/icon/search.png" alt=""></a>
+                    <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
 
-                      <div style="width: 21px;
-                      height: 21px; margin-right: 20px;">
-                          <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
-                      </div>
-                      
-                      <div style="width: 19px;
-                      height: 19px;">
-                          <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
-                      </div>
-                  </div>
-              </div>
+                    <div style="width: 21px;
+                    height: 21px; margin-right: 20px;">
+                        <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
+                    </div>
+                    
+                    <div style="width: 19px;
+                    height: 19px;">
+                        <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
+                    </div>
+                </div>
+            </div>
           </div>
           <div class="canvas__open"><i class="fa fa-bars"></i></div>
       </div>
@@ -183,8 +182,10 @@
                   </tr>
                 </thead>
                 <tbody>
+                  
                   <% let totalPrice = 0 %> <% cart.items.forEach((item) => { %>
                   <tr>
+                    
                     <td class="product__cart__item">
                       <div class="product__cart__item__pic">
                         <img
