--- a/views/userView/login.ejs
+++ b/views/userView/login.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Login 04</title>
+  	<title>SOLE SAAVY</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,16 +10,26 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<link rel="stylesheet" href="LOG/css/style.css">
+	<style>
+		.message-container {
+    background-color: #bfd1d65d;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    min-height: 30px;
+}
 
+.message-text {
+    color: rgb(235, 2, 2);
+    margin-bottom: 10px;
+}
+	</style>
 	</head>
+
 	<body>
 	<section class="ftco-section">
 		<div class="container">
-			<!-- <div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Login #04</h2>
-				</div>
-			</div> -->
+			
 			<div class="row justify-content-center ">
 				<div class="col-md-12 col-lg-10" ">
 					<div class="wrap d-md-flex">
@@ -30,12 +40,11 @@
 			      		<div class="w-100">
 			      			<h3 class="mb-4">Login</h3>
 							  <% if (locals.message) { %>
-								<!-- <h4 style="color: rgba(138, 157, 61, 0.458) "><%= message %></h4> -->
-								<div style="background-color: #d1c58b; padding: 10px; border: 1px solid #ccc; border-radius: 5px; min-height: 30px;">
-									<h4 style="color: rgb(235, 2, 2); margin-bottom: 10px;"><%= message %></h4>
-								  </div>
-						    <% } %>
-
+								<div class="message-container">
+									<h4 class="message-text"><%= message %></h4>
+								</div>
+							<% } %>
+							
 						<!-- <% if (locals.verifymessage) { %>
 							<h4 style="color: rgb(235, 2, 2) "><%= verifymessage %></h4>
 							<a href='/otp' ;" >Click Here To Get OTP </a>
