--- a/views/userView/shop.ejs
+++ b/views/userView/shop.ejs
@@ -112,10 +112,9 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3 col-md-3" style="padding-left: 70px;">
+                <div class="col-lg-3 col-md-3" style="padding-left: 112px;">
                     <div class="header__nav__option d-flex">
-                        <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                        <a href="#"><img src="img/icon/heart.png" alt=""></a>
+                        <a  href="" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                         <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
 
                         <div style="width: 21px;
