--- a/views/userView/Resetpassword.ejs
+++ b/views/userView/Resetpassword.ejs
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Login 04</title>
+	<title>Sole Saavy</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
