--- a/views/userView/productdetails.ejs
+++ b/views/userView/productdetails.ejs
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sole Savvy</title>
+    <title>Sole Saavy</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
