--- a/views/userView/register.ejs
+++ b/views/userView/register.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SOLE SAAVY</title>
+    <title>Sole Saavy</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
