--- a/views/adminView/Dashboard.ejs
+++ b/views/adminView/Dashboard.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SOLE SAAVY</title>
-  <link rel="shortcut icon" type="image/png" href="/img/SS.png" />
+  <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofP+MMJLFXaBxfsG6h02twsjFU5i1LdT2t" crossorigin="anonymous">
