--- a/views/adminView/addOffer.ejs
+++ b/views/adminView/addOffer.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SOLE SAAVY</title>
-    <link rel="shortcut icon" type="image/png" href="../assets/images/logos/ss.png" />
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
     <link rel="stylesheet" href="../assets/css/styles.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" /> <!-- External CSS file for additional styles -->
