--- a/views/adminView/editProduct.ejs
+++ b/views/adminView/editProduct.ejs
@@ -5,11 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SOLE SAAVY</title>
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="/img/ssLOGO.png"
-    />
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
     <link rel="stylesheet" href="/assets/css/styles.min.css" />
     <link
       rel="stylesheet"
