--- a/views/adminView/login.ejs
+++ b/views/adminView/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   	<title>SOLE SAAVY</title>
+	  <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
