--- a/views/adminView/orderDetails.ejs
+++ b/views/adminView/orderDetails.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OrderDetails</title>
+    <title>Sole Saavy</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
