--- a/views/userView/404.ejs
+++ b/views/userView/404.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
     <style>
         body {
             font-family: 'Arial', sans-serif;
