--- a/views/userView/BlockedPage.ejs
+++ b/views/userView/BlockedPage.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blocked Page</title>
+  <title>Sole Saavy</title>
+  <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
   <style>
     body {
       display: flex;
