--- a/views/userView/editAddress.ejs
+++ b/views/userView/editAddress.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Address</title>
+  <title>Sole Saavy</title>
+  <link rel="shortcut icon" type="image/png" href="/img/Favicon.jpg" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
