--- a/views/userView/orderDetail.ejs
+++ b/views/userView/orderDetail.ejs
@@ -83,17 +83,17 @@
               </div>
               <div class="col-lg-3 col-md-3" style="padding-left: 112px;">
                 <div class="header__nav__option d-flex">
-                    <a  href="" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                    <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
+                    <a  href="" class="search-switch"><img src="/img/icon/search.png" alt=""></a>
+                    <a href="./cart"><img src="/img/icon/cart.png" alt="cart"> </a>
 
                     <div style="width: 21px;
                     height: 21px; margin-right: 20px;">
-                        <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
+                        <a href="./wallet"><img src="/img/icon/wallet.png" alt="Wallet"></i> </a>
                     </div>
                     
                     <div style="width: 19px;
                     height: 19px;">
-                        <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
+                        <a href="./profile"><img src="/img/icon/user.png" alt="Profile"> </a>
                     </div>
                 </div>
             </div>
@@ -218,7 +218,6 @@
     <script>
 
      function invoiceGenerater(orderid){
-     console.log('hai 1');
 
       fetch('invoiceData',{
             method:'post',
@@ -232,17 +231,17 @@
           })
      .then(data=>{
         const Orders = data.orders
-        
+        console.log(Orders);
         let productsArray = [];
-     
+       let couponPrice = Orders.couponOffer/Orders.products.length
       
 Orders.products.forEach(product => {
-  
+        
         productsArray.push({
             "quantity": product.quantity,
             "description": product.productId.productName,
             "tax-rate": 0,  // Adjust as needed
-            "price": product.productId.actualPrice
+            "price": product.productId.actualPrice - (product.productId.offerAmound + couponPrice),
         });
    
 });
